# kokko

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  global.settings
editor/: CMakeLists.txt
editor/src/: AssetBrowserView.cpp  AssetBrowserView.hpp  AssetLibrary.cpp  AssetLibrary.hpp  AssetView.cpp  AssetView.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  ConsoleView.cpp  ConsoleView.hpp  DebugView.cpp  DebugView.hpp  EditorApp.cpp  EditorApp.hpp  EditorAssetLoader.cpp  EditorAssetLoader.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorConstants.cpp  EditorConstants.hpp  EditorContext.hpp  EditorCore.cpp  EditorCore.hpp  EditorImages.cpp  EditorImages.hpp  EditorProject.cpp  EditorProject.hpp  EditorUserSettings.cpp  EditorUserSettings.hpp  EditorWindow.cpp  EditorWindow.hpp  EditorWindowInfo.hpp  EntityListView.cpp  EntityListView.hpp  EntityView.cpp  EntityView.hpp  FilePickerDialog.cpp  FilePickerDialog.hpp  Hash_StdFilesystem.hpp  ImGuiInputView.cpp  (+11 more)
editor/src/App/: EditorApp.cpp  EditorApp.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorConstants.cpp  EditorConstants.hpp  EditorContext.hpp  EditorCore.cpp  EditorCore.hpp  EditorImages.cpp  EditorImages.hpp  EditorProject.cpp  EditorProject.hpp  EditorUserSettings.cpp  EditorUserSettings.hpp  main.cpp
editor/src/System/: ConsoleLogger.cpp  ConsoleLogger.hpp  EditorAssetLoader.cpp  EditorAssetLoader.hpp  Hash_StdFilesystem.hpp  ImguiImplOpenGL.cpp  ImguiImplOpenGL.hpp
editor/src/Views/: AssetBrowserView.cpp  AssetBrowserView.hpp  AssetView.cpp  AssetView.hpp  ConsoleView.cpp  ConsoleView.hpp  DebugView.cpp  DebugView.hpp  EditorWindow.hpp  EntityListView.cpp  EntityListView.hpp  EntityView.cpp  EntityView.hpp  FilePickerDialog.cpp  FilePickerDialog.hpp  SceneView.cpp  SceneView.hpp  TerrainDebugView.cpp  TerrainDebugView.hpp
engine/: CMakeLists.txt
engine/res/models/: cube.glb  plane.glb  sphere.glb
engine/src/Core/: Array.cpp  Array.hpp  ArrayView.hpp  BitPack.hpp  BitfieldVariable.cpp  BitfieldVariable.hpp  CString.cpp  CString.hpp  Color.cpp  Color.hpp  ColorSrgb.hpp  Core.hpp  EncodingUtf8.cpp  EncodingUtf8.hpp  FixedArray.hpp  Hash.cpp  Hash.hpp  HashMap.cpp  HashMap.hpp  Optional.hpp  Pair.hpp  Queue.cpp  Queue.hpp  Range.hpp  Sort.hpp  SortedArray.cpp  SortedArray.hpp  String.cpp  String.hpp  StringRef.cpp  StringRef.hpp  StringUtil.cpp  StringUtil.hpp  StringView.cpp  StringView.hpp  TypeTraits.hpp  Uid.cpp  Uid.hpp  UniquePtr.hpp
engine/src/Debug/: Debug.cpp  Debug.hpp  DebugConsole.cpp  DebugConsole.hpp  DebugCulling.cpp  DebugCulling.hpp  DebugGraph.cpp  DebugGraph.hpp  DebugLog.cpp  DebugLog.hpp  DebugMemoryStats.cpp  DebugMemoryStats.hpp  DebugTextRenderer.cpp  DebugTextRenderer.hpp  DebugUtil.hpp  DebugVectorRenderer.cpp  DebugVectorRenderer.hpp  Instrumentation.cpp  Instrumentation.hpp  InstrumentationTimer.cpp  InstrumentationTimer.hpp  Log.cpp  PerformanceTimer.hpp
engine/src/Engine/: ComponentSerializer.hpp  ComponentSystemDefaultImpl.hpp  Engine.cpp  Engine.hpp  EngineConstants.cpp  EngineConstants.hpp  EngineSettings.hpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityManager.cpp  EntityManager.hpp  InstanceAllocatorPair.hpp  Job.hpp  JobAllocator.cpp  JobAllocator.hpp  JobFunction.hpp  JobHelpers.hpp  JobQueue.cpp  JobQueue.hpp  JobSystem.cpp  JobSystem.hpp  JobWorker.cpp  JobWorker.hpp  World.cpp  World.hpp
engine/src/Graphics/: BloomEffect.cpp  BloomEffect.hpp  EnvironmentManager.cpp  EnvironmentManager.hpp  EnvironmentSerializer.hpp  EnvironmentSystem.cpp  EnvironmentSystem.hpp  GraphicsFeature.hpp  GraphicsFeatureBloom.cpp  GraphicsFeatureBloom.hpp  GraphicsFeatureCommandList.cpp  GraphicsFeatureCommandList.hpp  GraphicsFeatureDeferredLighting.cpp  GraphicsFeatureDeferredLighting.hpp  GraphicsFeatureSkybox.cpp  GraphicsFeatureSkybox.hpp  GraphicsFeatureSsao.cpp  GraphicsFeatureSsao.hpp  GraphicsFeatureTonemapping.cpp  GraphicsFeatureTonemapping.hpp  ParticleEmitterSerializer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Scene.cpp  Scene.hpp  ScreenSpaceAmbientOcclusion.cpp  ScreenSpaceAmbientOcclusion.hpp  TerrainInstance.cpp  TerrainInstance.hpp  TerrainQuadTree.cpp  TerrainQuadTree.hpp  TerrainSerializer.hpp  TerrainSystem.cpp  TerrainSystem.hpp  TerrainTileId.hpp  TransformSerializer.hpp  TransformUpdateReceiver.hpp
engine/src/Math/: AABB.cpp  AABB.hpp  BoundingBox.cpp  BoundingBox.hpp  Frustum.hpp  Intersect3D.cpp  Intersect3D.hpp  Mat2x2.hpp  Mat3x3.cpp  Mat3x3.hpp  Mat4x4.cpp  Mat4x4.hpp  Math.cpp  Math.hpp  Plane.hpp  Projection.hpp  Random.cpp  Random.hpp  Rectangle.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
engine/src/Memory/: Allocator.cpp  Allocator.hpp  AllocatorManager.cpp  AllocatorManager.hpp  DefaultAllocator.cpp  DefaultAllocator.hpp  MetricAllocator.cpp  MetricAllocator.hpp  RootAllocator.cpp  RootAllocator.hpp  TraceAllocator.cpp  TraceAllocator.hpp
engine/src/Platform/: Window.cpp  Window.hpp  WindowMetal.hpp  WindowMetal.mm  WindowOpenGL.cpp  WindowOpenGL.hpp
engine/src/Rendering/: CameraParameters.hpp  CameraSerializer.hpp  CameraSystem.cpp  CameraSystem.hpp  CascadedShadowMap.cpp  CascadedShadowMap.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandEncoder.cpp  CommandEncoder.hpp  CommandEncoderDebugScope.cpp  CommandEncoderDebugScope.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandExecutorOpenGL.cpp  CommandExecutorOpenGL.hpp  Framebuffer.cpp  Framebuffer.hpp  Light.hpp  LightManager.cpp  LightManager.hpp  LightSerializer.hpp  MeshComponentSerializer.hpp  MeshComponentSystem.cpp  MeshComponentSystem.hpp  PostProcessRenderPass.hpp  PostProcessRenderer.cpp  PostProcessRenderer.hpp  RenderCommand.hpp  RenderCommandBuffer.hpp  RenderCommandData.hpp  RenderCommandEncoder.cpp  RenderCommandEncoder.hpp  RenderCommandExecutor.hpp  RenderCommandExecutorOpenGL.cpp  RenderCommandExecutorOpenGL.hpp  RenderCommandList.cpp  (+46 more)
render-test/: CMakeLists.txt
render-test/src/: TestRunnerAssetLoader.cpp  TestRunnerAssetLoader.hpp  main.cpp
render-test/tests/: project.yml
samples/: CMakeLists.txt
samples/src/: App.cpp  App.hpp  main.cpp
(+921 files in other folders)
